compiler/tests/fixtures/invalid/semantics/role_mean_out_of_range.viv
// Invalid: role with mean outside min-max range

action bad-mean:
    roles:
        @actor:
            as: initiator
        @crowd*:
            as: bystander
            n: 2-5 [~10]
